_build/html/reports/ch1_1_video.log
Traceback (most recent call last):
  File "/anaconda3/envs/myenv/lib/python3.9/site-packages/jupyter_cache/executors/utils.py", line 51, in single_nb_execution
    executenb(
  File "/anaconda3/envs/myenv/lib/python3.9/site-packages/nbclient/client.py", line 1117, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/anaconda3/envs/myenv/lib/python3.9/site-packages/nbclient/util.py", line 78, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/anaconda3/envs/myenv/lib/python3.9/site-packages/nbclient/util.py", line 57, in just_run
    return loop.run_until_complete(coro)
  File "/anaconda3/envs/myenv/lib/python3.9/asyncio/base_events.py", line 642, in run_until_complete
    return future.result()
  File "/anaconda3/envs/myenv/lib/python3.9/site-packages/nbclient/client.py", line 558, in async_execute
    await self.async_execute_cell(
  File "/anaconda3/envs/myenv/lib/python3.9/site-packages/nbclient/client.py", line 862, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "/anaconda3/envs/myenv/lib/python3.9/site-packages/nbclient/client.py", line 765, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
##Formulate “learning”
- Data: $\{x_j, y_j\}_{j=1}^N$
- Find $f^*$ in some function class s.t. $f^*(x_j) \approx y_j$.
- Mathematically, solve the optimization problem by parameterizing the abstract function class
$
	\min_{\theta} \mathcal L(\theta)
$
- where
$
		\mathcal L( \theta):=
		{\mathbb E}_{(x,y)\sim \mathcal D}[\ell(f(x;  \theta), y)]\approx L( \theta) :=
		\frac{1}{N} \sum_{j=1}^N\ell(y_j, f(x_j;  \theta))
$
- Here
$
\ell(y_j,f(x_j;  \theta))
$ 
is a  general distance between real label $y_j$ and predicted label $f(x_j;\theta)$

Two commonly used distances are 
- $l^2$ distance: 
$
		\ell(y_j,f(x_j; \theta)) = \|y_j - f(x_j; \theta)\|^2.
$		
- KL-divergence distance:
$
\ell(y_j, f(x_j;  \theta)) = \sum_{i=1}^k [y_j]_i \log\frac{[y_j]_i }{[f(x_j; \theta)]_i}.
$


 
------------------

[0;36m  File [0;32m"/var/folders/xz/fhb2zgq551315f5zf88k__ph0000gn/T/ipykernel_81262/1356743603.py"[0;36m, line [0;32m2[0m
[0;31m    - Data: $\{x_j, y_j\}_{j=1}^N$[0m
[0m            ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (1356743603.py, line 2)

